--- a/nicepage.css
+++ b/nicepage.css
@@ -35961,25 +35961,111 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-footer .u-sheet-1 {
-  min-height: 120px;
+  min-height: 170px;
 }
 
 .u-footer .u-text-1 {
-  margin: 20px 0 60px;
-}
-
-.u-footer .u-icon-1 {
-  font-size: 2.5em;
+  margin: 85px 0 0;
 }
 
 .u-footer .u-btn-1 {
   background-image: none;
+  margin-top: 0;
   padding: 0;
 }
 
+.u-footer .u-layout-wrap-1 {
+  margin-top: -134px;
+  margin-bottom: 60px;
+}
 
+.u-footer .u-layout-cell-1 {
+  min-height: 110px;
+}
 
+.u-footer .u-container-layout-1 {
+  padding: 0 7px;
+}
 
+.u-footer .u-icon-1 {
+  width: 156px;
+  height: 55px;
+  margin: 30px 0 0 auto;
+}
+
+.u-footer .u-layout-cell-2 {
+  min-height: 110px;
+}
+
+.u-footer .u-container-layout-2 {
+  padding: 30px 11px;
+}
+
+.u-footer .u-text-2 {
+  margin: 0 auto 0 0;
+}
+@media (max-width: 1199px) {
+  .u-footer .u-sheet-1 {
+    min-height: 100px;
+  }
+
+  .u-footer .u-layout-wrap-1 {
+    margin-top: -134px;
+  }
+
+  .u-footer .u-layout-cell-1 {
+    min-height: 91px;
+  }
+
+  .u-footer .u-icon-1 {
+    width: 156px;
+    margin-right: 0;
+  }
+
+  .u-footer .u-layout-cell-2 {
+    min-height: 91px;
+  }
+
+  .u-footer .u-text-2 {
+    margin-left: 0;
+  }
+}
+@media (max-width: 991px) {
+  .u-footer .u-sheet-1 {
+    min-height: 23px;
+  }
+
+  .u-footer .u-layout-cell-1 {
+    min-height: 70px;
+  }
+
+  .u-footer .u-layout-cell-2 {
+    min-height: 100px;
+  }
+}
+@media (max-width: 767px) {
+  .u-footer .u-sheet-1 {
+    min-height: 530px;
+  }
+
+  .u-footer .u-layout-cell-1 {
+    min-height: 105px;
+  }
+
+  .u-footer .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+@media (max-width: 575px) {
+  .u-footer .u-sheet-1 {
+    min-height: 248px;
+  }
+
+  .u-footer .u-layout-cell-1 {
+    min-height: 66px;
+  }
+}
 
  /*begin-variables base-font-size*/ 
  html { font-size: 16px; }
